tests/ui/associated-types/impl-wf-cycle-2.stderr
error[E0275]: overflow evaluating the requirement `<(T,) as Grault>::A == _`
  --> $DIR/impl-wf-cycle-2.rs:7:1
   |
LL | / impl<T: Grault> Grault for (T,)
LL | |
LL | | where
LL | |     Self::A: Copy,
   | |__________________^
   |
note: required for `(T,)` to implement `Grault`
  --> $DIR/impl-wf-cycle-2.rs:7:17
   |
LL | impl<T: Grault> Grault for (T,)
   |                 ^^^^^^     ^^^^
...
LL |     Self::A: Copy,
   |              ---- unsatisfied trait bound introduced here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0275`.
